--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "server-backend": "mage -v && docker-compose up --build",
     "sign": "npx --yes @grafana/sign-plugin"
   },
-  "author": "Pgollangi",
-  "license": "Apache-2.0",
+  "author": "Prasanna Kumar Gollangi",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@grafana/e2e": "9.2.5",
